<resources>
    <string name="app_name">飞机订票</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_to_register_now">现在去注册</string>
    <string name="my_order">我的订单</string>
    <string name="mine">我的</string>
    <string name="my_trip">我的行程</string>
    <string name="passenger_info">乘机人信息</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出</string>
    <string name="treasure">宝典</string>
    <string name="index">首页</string>
    <string name="setout_date">出发日期</string>
    <string name="search">搜索</string>
    <string name="please_select">请选择</string>
    <string name="click_here_to_login">点此登陆</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="please_complete_info">请将信息填写完整</string>
    <string name="twice_password_not_same">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="please_login_first">请先登陆</string>
    <string name="name">姓名</string>
    <string name="add_passenger_name_hint">旅客姓名（必填）</string>
    <string name="certification_number">证件号码</string>
    <string name="add_passenger_certification_number_hint">证件号码（必填）</string>
    <string name="ID">身份证</string>
    <string name="certification_type">证件类型</string>
    <string name="man_type">旅客类型</string>
    <string name="man_type_adult"><![CDATA[成人>12]]></string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_hint">手机号（选填）</string>
    <string name="email">邮箱</string>
    <string name="email_hint">邮箱（选填）</string>
    <string name="add_passenger">添加乘机人</string>
    <string name="save">保存</string>
    <string name="select_passenger_type">选择旅客类型</string>
    <string name="please_input_validate_id_card">请输入有效的身份证</string>
    <string name="please_input_validate_phone_number">请输入有效的手机号</string>
    <string name="please_input_validate_email">请输入有效的邮箱地址</string>
    <string name="add_success">添加成功</string>
    <string name="vertify_fail">验证失败</string>
    <string name="select_city">选择城市</string>
    <string name="update_passenger_info">修改乘机人信息</string>
    <string name="modify_success">修改成功</string>
    <string name="comfirm_delete">确定删除？</string>
    <string name="please_select_from_city">请选择始发城市</string>
    <string name="please_select_to_city">请选择到达城市</string>
    <string name="please_select_date">请选择日期</string>
    <string name="pre_day">前一天</string>
    <string name="next_day">后一天</string>
    <string name="search_flight_result_date">%1$d月%2$d日 周%3$s</string>
    <string name="aircraft_number_and_account">%1$s | 经济舱%2$s折</string>
    <string name="aircraft_number_and_date_and_week">%1$s  |  %2$s  |  周%3$s</string>
    <string name="price">¥%1$s</string>
    <string name="select_cabin">选择舱位</string>
    <string name="booking">预定</string>
    <string name="discount">%1$s折</string>
    <string name="remain_ticket_num">余票: %1$s</string>
    <string name="passenger">乘机人</string>
    <string name="must_finish">必填</string>
    <string name="optional">选填</string>
    <string name="fill_in_order">填写订单</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="do_not_add_again">请不要重复添加</string>
    <string name="please_add_passenger">请添加乘机人</string>
    <string name="generate_order_success">下单成功</string>
    <string name="generate_order_fail">下单失败</string>
    <string name="delete_order">删除订单</string>
    <string name="total_price">合计：¥%1$s</string>
    <string name="order_detail">订单详情</string>
    <string name="i_want_return_ticket">我要退票</string>
    <string name="remain_money">余额：¥%1$s</string>
    <string name="already_return">已退票</string>
    <string name="already_finish">已完成</string>
    <string name="return_ticket_success">退票成功</string>
    <string name="new_password">新密码</string>
    <string name="send_vertify_code">发送验证码</string>
    <string name="confim">确认</string>
    <string name="verification_send_success">验证码发送成功</string>
    <string name="verification_send_fail">验证码发送失败</string>
    <string name="send_code_after_several_second">重新发送(%1$s)</string>
    <string name="modify_password_success">修改密码成功</string>
    <string name="my_info">我的信息</string>
    <string name="unknow">未知</string>
    <string name="nickname">昵称</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="modify_mine_info">修改我的信息</string>
    <string name="update_info_success">更新成功</string>
    <string name="select_gender">选择性别</string>
    <string name="return_modify_rule">
        <table>
            <tr>
                <th>舱位</th>
                <th>经济舱</th>
            </tr>
            <tr>
                <td>退票费</td>
                <td>sadfasf</td>
            </tr>
        </table>
    </string>
    <string name="no_passenger_info">没有乘机人信息</string>
    <string name="add">添加</string>
    <string name="select_certificate_type">选择证件类型</string>
</resources>
