<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".activitys.add_passenger.AddPassengerActivity">

    <include layout="@layout/bar_item"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:layout_height="@dimen/mine_item_height">
        <TextView
            android:background="@color/white"
            android:layout_width="80dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/text_gray"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/etName"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:hint="@string/add_passenger_name_hint"
            android:layout_height="match_parent" />
    </LinearLayout>

    <cn.miaole.aircraft_booking_android.views.LineMenuItem
        android:id="@+id/liCertificationType"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:menu_title_size="16sp"
        app:menu_value_size="16sp"
        app:menu_value="@string/ID"
        app:menu_title="@string/certification_type"
        app:menu_title_color="@color/text_gray"
        app:menu_value_color="@color/text_gray"
        android:layout_height="@dimen/mine_item_height">

    </cn.miaole.aircraft_booking_android.views.LineMenuItem>

    <include layout="@layout/divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:background="@color/white"
        android:layout_height="@dimen/mine_item_height">
        <TextView
            android:background="@color/white"
            android:layout_width="80dp"
            android:text="@string/certification_number"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/text_gray"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/etCertificateValue"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:hint="@string/add_passenger_certification_number_hint"
            android:layout_height="match_parent" />
    </LinearLayout>

    <cn.miaole.aircraft_booking_android.views.LineMenuItem
        android:id="@+id/liManType"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:background="@color/white"
        app:menu_title_size="16sp"
        app:menu_value_size="16sp"
        app:menu_value="@string/man_type_adult"
        app:menu_title="@string/man_type"
        app:menu_title_color="@color/text_gray"
        app:menu_value_color="@color/text_gray"
        android:layout_height="@dimen/mine_item_height">

    </cn.miaole.aircraft_booking_android.views.LineMenuItem>


    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:background="@color/white"
        android:layout_height="@dimen/mine_item_height">
        <TextView
            android:background="@color/white"
            android:layout_width="80dp"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/text_gray"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:hint="@string/phone_number_hint"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include layout="@layout/divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:background="@color/white"
        android:layout_height="@dimen/mine_item_height">
        <TextView
            android:background="@color/white"
            android:layout_width="80dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="@color/text_gray"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/etEmail"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:hint="@string/email_hint"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>