<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:background="@drawable/white_rounded_react_bg"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCabinType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="经济舱"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:text="@string/discount"
            app:layout_constraintBottom_toBottomOf="@+id/tvCabinType"
            app:layout_constraintStart_toEndOf="@+id/tvCabinType" />

        <TextView
            android:id="@+id/tvTicketNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:text="@string/remain_ticket_num"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvCabinType"
            app:layout_constraintTop_toBottomOf="@+id/tvCabinType" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:text="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/btnBooking"
            app:layout_constraintEnd_toStartOf="@+id/btnBooking"
            app:layout_constraintTop_toBottomOf="@+id/btnBooking" />

        <Button
            android:id="@+id/btnBooking"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:width="60dp"
            android:height="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_red_react_bg"
            style="?borderlessButtonStyle"
            android:textColor="@color/white"
            android:text="@string/booking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>